--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -326,6 +326,9 @@
     <ClCompile Include="UVa\11100\11172.cpp">
       <Filter>UVa\11100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10038.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
