--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -335,6 +335,12 @@
     <ClCompile Include="UVa\400\494.cpp">
       <Filter>UVa\400\490</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10035.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\10300\10346.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
