--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -341,6 +341,9 @@
     <ClCompile Include="UVa\10300\10346.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\300\357.cpp">
+      <Filter>UVa\300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
