--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -383,6 +383,9 @@
     <ClCompile Include="UVa\10000\10008.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11800\11854.cpp">
+      <Filter>UVa\11800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
