--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -386,6 +386,9 @@
     <ClCompile Include="UVa\11800\11854.cpp">
       <Filter>UVa\11800</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\500\562.cpp">
+      <Filter>UVa\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
