--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -282,6 +282,9 @@
     <Filter Include="Library\Misc">
       <UniqueIdentifier>{438a1fb7-748d-4470-a782-90d045e19a88}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Library\old">
+      <UniqueIdentifier>{56590f46-3ab8-4362-a50d-67d0c296a81d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source.cpp">
@@ -389,6 +392,9 @@
     <ClCompile Include="UVa\500\562.cpp">
       <Filter>UVa\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\500\583.cpp">
+      <Filter>UVa\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
@@ -399,6 +405,102 @@
     </ClInclude>
     <ClInclude Include="Library\utils.h">
       <Filter>Library\Misc</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\graham.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\graph.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\graph_util.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\line.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\matching.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\max_flow.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\misc.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\number_theory.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\point.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\polygon.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\primes.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\segment.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\segment_tree.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\shortest_path.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\sorting.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\spanning_tree.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\sweep_line.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\topo_sort.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\triangle.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\union_find.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\util.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\bases.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\binary_search.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\circle.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\combinatorics.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\components.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\double.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\dp_algs.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\eularian.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\floodfill.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\old\fraction.h">
+      <Filter>Library\old</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\primes.h">
+      <Filter>Library\Mathematics</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
