--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -395,6 +395,9 @@
     <ClCompile Include="UVa\500\583.cpp">
       <Filter>UVa\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\600\624.cpp">
+      <Filter>UVa\600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
