--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -398,6 +398,9 @@
     <ClCompile Include="UVa\600\624.cpp">
       <Filter>UVa\600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10200\10260.cpp">
+      <Filter>UVa\10200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
