--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -413,6 +413,9 @@
     <ClCompile Include="UVa\11800\11875.cpp">
       <Filter>UVa\11800</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\484.cpp">
+      <Filter>UVa\400\480</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
