--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -416,6 +416,9 @@
     <ClCompile Include="UVa\400\484.cpp">
       <Filter>UVa\400\480</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10400\10474.cpp">
+      <Filter>UVa\10400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
