--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -419,6 +419,9 @@
     <ClCompile Include="UVa\10400\10474.cpp">
       <Filter>UVa\10400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11800\11805.cpp">
+      <Filter>UVa\11800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
