--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -422,6 +422,9 @@
     <ClCompile Include="UVa\11800\11805.cpp">
       <Filter>UVa\11800</Filter>
     </ClCompile>
+    <ClCompile Include="TopCoder\TCO\TCO 2018 Round 1A\RedDragonInn.cpp">
+      <Filter>TopCoder\TCO 2018\Round 1A</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
